syntax = "proto3";

package gateway;

import "proto/common/types.proto";

option java_package = "com.example.gateway";
option java_outer_classname = "GatewayProto";
option go_package = "github.com/example/bazel-example/proto/gateway";

// Gateway request/response messages
message HealthCheckRequest {
}

message HealthCheckResponse {
  string status = 1;
  string service = 2;
  common.Timestamp timestamp = 3;
}

// Authentication messages
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string user_id = 2;
  common.Timestamp expires_at = 3;
}

// Generic API response wrapper
message ApiResponse {
  bool success = 1;
  string message = 2;
  string error_code = 3;
  repeated string errors = 4;
}
