package client

import (
	"context"
	"fmt"
	"log"
	"time"

	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

// UserClient wraps the gRPC client for user service
type UserClient struct {
	conn   *grpc.ClientConn
	// client user.UserServiceClient  // TODO: Add when proto is properly generated
}

// NewUserClient creates a new user service client
func NewUserClient(address string) (*UserClient, error) {
	conn, err := grpc.Dial(address, grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		return nil, fmt.Errorf("failed to connect to user service: %w", err)
	}

	return &UserClient{
		conn: conn,
		// client: user.NewUserServiceClient(conn),  // TODO: Add when proto is properly generated
	}, nil
}

// Close closes the gRPC connection
func (c *UserClient) Close() error {
	return c.conn.Close()
}

// CreateUser creates a new user
func (c *UserClient) CreateUser(ctx context.Context, req interface{}) (interface{}, error) {
	log.Printf("Creating user via gRPC")
	
	// TODO: Implement actual gRPC call when proto is properly generated
	// ctx, cancel := context.WithTimeout(ctx, 10*time.Second)
	// defer cancel()
	// 
	// return c.client.CreateUser(ctx, req)
	
	// Mock response for now
	time.Sleep(100 * time.Millisecond) // Simulate network call
	return map[string]interface{}{
		"id":       "user-123",
		"email":    "user@example.com",
		"username": "testuser",
		"status":   "created",
	}, nil
}

// GetUser retrieves a user by ID
func (c *UserClient) GetUser(ctx context.Context, userID string) (interface{}, error) {
	log.Printf("Getting user %s via gRPC", userID)
	
	// TODO: Implement actual gRPC call when proto is properly generated
	// ctx, cancel := context.WithTimeout(ctx, 10*time.Second)
	// defer cancel()
	// 
	// req := &user.GetUserRequest{Id: userID}
	// return c.client.GetUser(ctx, req)
	
	// Mock response for now
	time.Sleep(50 * time.Millisecond) // Simulate network call
	return map[string]interface{}{
		"id":       userID,
		"email":    "user@example.com",
		"username": "testuser",
		"status":   "active",
	}, nil
}

// UpdateUser updates an existing user
func (c *UserClient) UpdateUser(ctx context.Context, req interface{}) (interface{}, error) {
	log.Printf("Updating user via gRPC")
	
	// TODO: Implement actual gRPC call when proto is properly generated
	// ctx, cancel := context.WithTimeout(ctx, 10*time.Second)
	// defer cancel()
	// 
	// return c.client.UpdateUser(ctx, req)
	
	// Mock response for now
	time.Sleep(100 * time.Millisecond) // Simulate network call
	return map[string]interface{}{
		"id":     "user-123",
		"status": "updated",
	}, nil
}

// DeleteUser deletes a user
func (c *UserClient) DeleteUser(ctx context.Context, userID string) (bool, error) {
	log.Printf("Deleting user %s via gRPC", userID)
	
	// TODO: Implement actual gRPC call when proto is properly generated
	// ctx, cancel := context.WithTimeout(ctx, 10*time.Second)
	// defer cancel()
	// 
	// req := &user.DeleteUserRequest{Id: userID}
	// resp, err := c.client.DeleteUser(ctx, req)
	// if err != nil {
	//     return false, err
	// }
	// return resp.Success, nil
	
	// Mock response for now
	time.Sleep(50 * time.Millisecond) // Simulate network call
	return true, nil
}

// AuthenticateUser authenticates a user
func (c *UserClient) AuthenticateUser(ctx context.Context, email, password string) (interface{}, error) {
	log.Printf("Authenticating user %s via gRPC", email)
	
	// TODO: Implement actual gRPC call when proto is properly generated
	// ctx, cancel := context.WithTimeout(ctx, 10*time.Second)
	// defer cancel()
	// 
	// req := &user.AuthenticateUserRequest{
	//     Email:    email,
	//     Password: password,
	// }
	// return c.client.AuthenticateUser(ctx, req)
	
	// Mock response for now
	time.Sleep(200 * time.Millisecond) // Simulate network call
	return map[string]interface{}{
		"user": map[string]interface{}{
			"id":       "user-123",
			"email":    email,
			"username": "testuser",
		},
		"token": "jwt-token-123",
	}, nil
}
